--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Julian Cohen</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Julian Cohen, juco, Lead Developer, Developer Brighton">
+
+    <title>Julian Cohen</title>
+
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
     <div class="container">
