--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="Julian Cohen, juco, Lead Developer, Developer Brighton">
+    <meta name="description" content="Julian Cohen / Juco - A Web Developer based in Brighton. Specialising in Ruby, Javascript and PHP">
 
     <title>Julian Cohen</title>
 
